# dutybound

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
dutybound/: __init__.py  __main__.py  cli.py  diff.py  ids.py  ledger.py  models.py  patterns.py  policy.py  report.py  session.py  snapshot.py
examples/: documentation-dutybound.yaml
tests/: helpers.py  test_end_to_end.py  test_ledger.py  test_patterns_policy.py  test_snapshot_diff.py
