[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dutybound"
version = "0.1.0"
description = "Local, deterministic oversight for AI agent workspace sessions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Michele Montedoro" }
]
dependencies = [
  "PyYAML>=6.0,<7"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Monitoring"
]

[project.scripts]
dutybound = "dutybound.cli:main"

[tool.setuptools.packages.find]
include = ["dutybound*"]

